.deploys/deploy_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: label-backend-deployment
  namespace: label
  labels:
    app: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: label-backend
  template:
    metadata:
      labels:
        app: label-backend
    spec:
      containers:
        - name: label-backend
          image: $CI_REGISTRY/cour-de-cassation/label:$CI_COMMIT_BRANCH-$CI_COMMIT_SHORT_SHA-label-backend
          ports:
            - containerPort: 55430
---
apiVersion: v1
kind: Service
metadata:
  name: label-backend-service
  namespace: label
spec:
  selector:
    app: label-backend
  ports:
    - name: label-backend-port
      port: 55430
      targetPort: 55430
  type: ClusterIP
