.deploys/deploy_ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route
  namespace: label
spec:
  entryPoints:
    - web

    # regarder la gueule des ingress de prod

  routes:
    # - match: Host(`juritj.judilibre-prive.local`) && PathPrefix(`/label-client`)
    #   kind: Rule
    #   services:
    #     - name: label-client-service
    #       port: label-client-port
    #   middlewares:
    #     - name: label-client-stripprefix
    # - match: Host(`juritj.judilibre-prive.local`) && PathPrefix(`/label-backend`)
    #   kind: Rule
    #   services:
    #     - name: label-backend-service
    #       port: label-backend-port
    #   middlewares:
    #     - name: label-backend-stripprefix
    - match: Host(`lbl.judilibre-prive.local`) && PathPrefix(`/label`)
      kind: Rule
      services:
        - name: label-client-service
          port: label-client-port
    - match: Host(`lbl.judilibre-prive.local`) && PathPrefix(`/label/api`)
      kind: Rule
      services:
        - name: label-backend-service
          port: label-backend-port

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: label-client-stripprefix
  namespace: label
spec:
  replacePathRegex:
    regex: /label-client(/|$)(.*)
    replacement: /$2

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: label-backend-stripprefix
  namespace: label
spec:
  replacePathRegex:
    regex: /label-backend(/|$)(.*)
    replacement: /$2
